# LEDMatrix

./: .gitignore  CMakeLists.txt  install.sh
apps/: CMakeLists.txt
apps/lib/fastnoise/: CMakeLists.txt
apps/src/: imageLoader.h
apps/src/colorwave/: CMakeLists.txt  colorwave.cpp  colorwave.h
apps/src/glow/: CMakeLists.txt  glow.cpp  glow.h
apps/src/lava/: AACanvas.cpp  AACanvas.h  CMakeLists.txt  lava.cpp  lava.h
apps/src/lightspeed/: CMakeLists.txt  lightspeed.cpp  lightspeed.h
apps/src/pong/: CMakeLists.txt  pong.cpp  pong.h
apps/src/scrolltext/: CMakeLists.txt  scrolltext.cpp  scrolltext.h  ubuntufont.h
apps/src/sparkles/: CMakeLists.txt  sparkles.cpp  sparkles.h
apps/src/wipe/: CMakeLists.txt  lava.cpp  wipe.cpp  wipe.h
config/: fade-in.sh  matrix.service
core/: CMakeLists.txt  CommandParser.cpp  CommandParser.h  FpsCounter.h  Globals.cpp  Globals.h  HardwareMatrix.cpp  HardwareMatrix.h  Matrix.h  MatrixManager.cpp  MatrixManager.h  ServiceUtils.cpp  ServiceUtils.h  SoftwareMatrix.cpp  SoftwareMatrix.h  TcpServer.cpp  TcpServer.h  main.cpp  socketThreads.h
core/Commands/: ActiveCommand.cpp  ActiveCommand.h  AppsCommand.cpp  AppsCommand.h  CMakeLists.txt  Command.h  FpsCommand.cpp  FpsCommand.h  HelpCommand.cpp  HelpCommand.h  ListCommand.cpp  ListCommand.h  PauseCommand.cpp  PauseCommand.h  ResetCommand.cpp  ResetCommand.h  SetCommand.cpp  SetCommand.h  StartCommand.cpp  StartCommand.h  StopCommand.cpp  StopCommand.h  UnpauseCommand.cpp  UnpauseCommand.h
include/: MatrixApp.h  MatrixDefines.h
lib/property/: CMakeLists.txt  Property.cpp  Property.h
lib/ws281x/: CMakeLists.txt  ws2811.c  ws2811.h
